[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pychangeset"
version = "0.1.0"
description = "Changeset management tool for Python projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "toml>=0.10",
    "gitpython>=3.0",
    "rich>=10.0",
    "coolname>=2.0",
]

[project.scripts]
changeset = "pychangeset.changeset:main"
pychangeset = "pychangeset.changeset:main"
pychangeset-version = "pychangeset.version:main"
pychangeset-changelog = "pychangeset.changelog:main"

[tool.uv]
dev-dependencies = []
