[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "changeset"
version = "0.1.0"
description = "Changeset management tool for Python projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "toml>=0.10",
    "gitpython>=3.0",
    "rich>=10.0",
    "coolname>=2.0",
]

[project.scripts]
changeset = "changeset.changeset:main"
pychangeset = "changeset.changeset:main"
pychangeset-version = "changeset.version:main"
pychangeset-changelog = "changeset.changelog:main"

[tool.hatch.build.targets.wheel]
packages = ["changeset"]

[tool.uv]
dev-dependencies = []
